--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,5 +19,6 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "requests-mock>=1.12.1",
     "ruff>=0.11.11",
 ]
