--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ build-backend = "hatchling.build"
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "pytest-cov>=6.1.1",
     "requests-mock>=1.12.1",
     "ruff>=0.11.11",
 ]
