--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,9 @@ dev = [
     "requests-mock>=1.12.1",
     "ruff>=0.11.11",
 ]
+
+[[tool.uv.index]]
+name = "testpypi"
+url = "https://test.pypi.org/simple/"
+publish-url = "https://test.pypi.org/legacy/"
+explicit = true
