--- a/.github/workflows/test-release.yml
+++ b/.github/workflows/test-release.yml
@@ -1,11 +1,16 @@
 name: Publish to TestPyPI
 
 on:
+  workflow_dispatch:
   pull_request:
     branches:
       - main
     types:
       - closed
+
+permissions:
+  contents: read
+  id-token: write
 
 jobs:
   prepare:
@@ -64,7 +69,6 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: build
-    if: github.event.pull_request.merged == true
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
