--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -3,7 +3,7 @@ name: Test and coverage
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
