--- a/.github/workflows/code-cov.yml
+++ b/.github/workflows/code-cov.yml
@@ -15,7 +15,7 @@ jobs:
           enable-cache: true
 
       - name: Install the project
-        run: uv sync --locked --all-extras --dev
+        run: uv sync --all-extras --dev
 
       - name: Run tests
         run: uv run pytest --cov --cov-branch --cov-report=xml
